--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<meta name="description" content="Información básica sobre el alumnado de 2º de Bachillerato">
+		<meta name="description" content="Helena Ortiz Martinez">
 		<title>Clase de 2º Bachillerato</title>
 		<link rel="stylesheet" href="./css/estilo.css">
 	</head>
@@ -19,10 +19,10 @@
 			<table class="tabla">
 				<caption>Alumnado de 2º Bachillerato</caption>
 					<tr>
-						<th>Nombre</th>
-						<th>Usuario GitHub</th>
-						<th>Dirección web Actividad 15</th>
-						<th>Color favorito</th>
+						<th>Helena</th>
+						<th>hortmar105</th>
+						<th>https://www.youtube.com/t/restricted_access?blocked=4</th>
+						<th>Azul</th>
 					</tr>
 					<!-- Donde ponga alumno X pon tu nombre completo. En el "id" pon solo el nombre sin pongas espacios-->
 					<!-- El número de cada alumno viene dado por el número de ordenador que usa -->
@@ -36,10 +36,10 @@
 					</tr>
 					
 					<tr>
-						<td>Nombre completo alumno 1</td>
-						<td>Usuario</td>
-						<td>Dirección web</td>
-						<td id="nombrealumno1">Color</td>
+						<td>helena ortiz martinez</td>
+						<td>hortmar105</td>
+						<td>https://www.youtube.com/t/restricted_access?blocked=4</td>
+						<td id="helena">azul</td>
 					</tr>
 					<tr>
 						<td>Nombre completo alumno 2</td>
